[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codd-street-graph"
dynamic = ["version"]
description = "Street graph optimization tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "KruASe76", email = "kruanse@ya.ru" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "geopandas",
  "networkx",
  "numpy",
  "pydantic",
  "shapely",
]

[project.urls]
Documentation = "https://digital-fracture.github.io/codd-street-graph"
Issues = "https://github.com/digital-fracture/codd-street-graph/issues"
Source = "https://github.com/digital-fracture/codd-street-graph"

[tool.hatch.version]
path = "src/codd_street_graph/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/codd_street_graph tests}"

[tool.coverage.run]
source_pkgs = ["codd_street_graph", "tests"]
branch = true
parallel = true
omit = [
  "src/codd_street_graph/__about__.py",
]

[tool.coverage.paths]
codd_street_graph = ["src/codd_street_graph", "*/codd-street-graph/src/codd_street_graph"]
tests = ["tests", "*/codd-street-graph/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.build]
exclude = [
  "mkdocs.yml",
  "docs/"
]
